--- a/resources/assets/sass/preloader.scss
+++ b/resources/assets/sass/preloader.scss
@@ -1,8 +1,18 @@
+div.splash {
+    display: flex;
+    flex-direction: column;
+}
+
+.wellcome {
+    
+    padding: 2em 0;
+}
 .wellcome-header {
-    position: absolute;
-    width: 100%;
-    margin-top: 3em;
-    z-index: 9999;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    height: 7em;
+    padding: 0 20px 20px;
 }
 @keyframes movebg {
     0% {
@@ -358,8 +368,7 @@
     .page {
         position: relative;
         display: grid;
-        padding: 5em 0 0 0;
-        height: 100vh;
+        padding: 0;
         align-items: center;
         justify-content: center;
         justify-items: center;
@@ -2697,7 +2706,7 @@
 	#wellcome > .page {
 		padding: 2em 0 0 0;
 		height: auto;	
-    	transform: scale(0.5);
+    	transform: scale(0.8);
     	transform-origin: 50% 0;
 	}
 }
